--- a/templates/about.html
+++ b/templates/about.html
@@ -1,6 +1,6 @@
 {% load static %}
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="scroll-behavior: smooth">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -41,9 +41,6 @@
       </div>
     </header>
 
-
-</div>
-
 <!-- Container (About Section) -->
 <div class="adwa-content adwa-container adwa-padding-64" id="about">
   <h3 class="adwa-center adwa-text-light-green">ABOUT</h3>
@@ -62,5 +59,25 @@
       <br>
      <i class="fa fa-quote-right adwa-right adwa-text-light-green adwa-xxlarge"></i>
     </p>
+
+<!-- Footer -->
+<footer class="adwa-container adwa-padding-32 adwa-theme-d1 adwa-center">
+    <h4>Follow Us</h4>
+    <a class="adwa-button adwa-large adwa-teal" href="javascript:void(0)" title="Facebook"><i class="fa fa-facebook"></i></a>
+    <a class="adwa-button adwa-large adwa-teal" href="javascript:void(0)" title="Twitter"><i class="fa fa-twitter"></i></a>
+    <a class="adwa-button adwa-large adwa-teal" href="javascript:void(0)" title="Google +"><i class="fa fa-google-plus"></i></a>
+    <a class="adwa-button adwa-large adwa-teal" href="javascript:void(0)" title="Google +"><i class="fa fa-instagram"></i></a>
+    <a class="adwa-button adwa-large adwa-teal adwa-hide-small" href="javascript:void(0)" title="Linkedin"><i class="fa fa-linkedin"></i></a>
+    <br>
+  
+    <div style="position:relative;bottom:100px;z-index:1;" class="adwa-tooltip adwa-right">
+      <span class="adwa-text adwa-padding adwa-teal adwa-hide-small">Go To Top</span>   
+      <a class="adwa-button adwa-theme" href="#"><span class="adwa-xlarge">
+      <i class="fa fa-chevron-circle-up"></i></span></a>
+    </div>
+  </footer>
+
+  </div>
+
     </body>
 </html>
