--- a/templates/register.html
+++ b/templates/register.html
@@ -29,9 +29,9 @@
           <label class="adwa-text-teal"><b>Email</b></label>
           <input class="adwa-pale-green adwa-input adwa-border adwa-margin-bottom" type="email" placeholder="Email..." name="email" required>
           <label class="adwa-text-teal"><b>Password</b></label>
-          <input class="adwa-pale-green adwa-input adwa-border adwa-margin-bottom" type="password" id="myInput" name="password1" required placeholder="Enter Password">
+          <input class="adwa-pale-green adwa-input adwa-border adwa-margin-bottom" type="password" id="myInput" name="password" required placeholder="Enter Password">
           <label class="adwa-text-teal"><b>Confirm Password</b></label>
-          <input class="adwa-pale-green adwa-input adwa-border adwa-margin-bottom" type="password" id="myInput1" name="password1" required placeholder="Enter Password">
+          <input class="adwa-pale-green adwa-input adwa-border adwa-margin-bottom" type="password" id="myInput1" name="confirm_password" required placeholder="Enter Password">
           <span class="adwa-right">Show Password <input class="adwa-check" type="checkbox" onclick="myFunction()"></span>
           <br>
           <button class="adwa-button adwa-border adwa-border-teal adwa-hover-teal adwa-hover-shadow adwa-teal adwa-button adwa-block adwa-section adwa-padding"  type="submit">Register</button>
