--- a/templates/login.html
+++ b/templates/login.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{% static 'css/adwa.css' %}">
+    <link rel="shortcut icon" href="{% static 'img/favicon.jpg' %}" type="image/x-icon">
     <title>LOGIN</title>
     <style></style>
 </head>
