--- a/templates/index.html
+++ b/templates/index.html
@@ -132,7 +132,7 @@
       <tr>
         <td class="adwa-border-right">Total Savings</td>
         <td class="adwa-border-right"><i class="fa fa-dollar"></i> {{total_savings}}</td>
-        <td class="adwa-center adwa-white"> {{main_advice}}</td>
+        <td colspan="3" class="adwa-center adwa-white"> {{main_advice}}</td>
       </tr>
       <tr class="adwa-bottombar adwa-border-green">
         <td class="adwa-border-right">Total Return</td>
